--- a/src/Components/hero/Hero.css
+++ b/src/Components/hero/Hero.css
@@ -120,7 +120,7 @@
 }
 
 .food-btn {
-  background-color: white;
+  background-color:orangered;
   border: none;
   border-radius: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -147,7 +147,7 @@
 
 .food-btn:hover {
   /* transform: translateY(-5px); */
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); */
 }
 
 @media (max-width: 950px){
