--- a/src/Components/hero/Hero.css
+++ b/src/Components/hero/Hero.css
@@ -4,7 +4,7 @@
   background-color: orangered;
   color: white;
   text-align: center;
-  padding: 60px 20px;
+  /* padding: 60px 20px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -211,6 +211,6 @@
   }
 
   .hero-left-img-wrapper {
-    max-width: 180px;
+    /* max-width: 180px; */
   }
 }
