--- a/src/Components/hero/Hero.css
+++ b/src/Components/hero/Hero.css
@@ -4,7 +4,7 @@
   background-color: orangered;
   color: white;
   text-align: center;
-  /* padding: 60px 20px; */
+  padding: 60px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
