--- a/src/Components/hero/Hero.css
+++ b/src/Components/hero/Hero.css
@@ -94,6 +94,8 @@
   width: 100%;
   height: 350px;
   object-fit: contain;
+  margin: 0;
+  padding:0;
 }
 
 .hero-right-img-wrapper {
@@ -110,6 +112,8 @@
   width: 100%;
   height: 350px;
   object-fit: contain;
+  margin: 0;
+  padding:0;
 }
 
 .food-insta-dine-btn {
@@ -211,6 +215,6 @@
   }
 
   .hero-left-img-wrapper {
-    /* max-width: 180px; */
+    max-width: 180px;
   }
 }
