add cart button and data

--- a/src/Component 2/Navbar2/Navbar2.css
+++ b/src/Component 2/Navbar2/Navbar2.css
@@ -6,6 +6,7 @@ padding: 10px 100px 10px 40px;
 background-color: white;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);  
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-bottom: 20px;
 }
 
 
@@ -15,13 +16,24 @@ background-color: white;
     gap: 10px;
 
 }
+
+.swiggy-logo-other button{
+  border: none;
+  background: transparent;
+  text-decoration: underline;
+  font-weight: 600;
+  font-size: 15px;
+}
+
+
 .nav-items-list ul{
     list-style: none;
   display: flex;
   gap: 60px;
   margin: 0;
   padding: 0;
-    
+     font-weight: 600;
+  font-size: 15px;
 }
 .nav-items-list li {
   cursor: pointer;
@@ -29,6 +41,7 @@ background-color: white;
   color: #333;
   transition: color 0.3s ease;
 }
-.nav-items-list li:hover {
+.nav-items-list li:hover,
+.swiggy-logo-other button:hover {
   color: #fc8019;
 }
