--- a/src/Cart/Cart.css
+++ b/src/Cart/Cart.css
@@ -1,6 +1,19 @@
 .cart-container {
   padding: 20px;
+  
 
+  
+}
+.cart-container h2{
+  text-align: center;
+  margin-bottom: 10px;
+  text-decoration: underline;
+  
+  
+}
+.cart-container-para-1{
+  text-align: center;
+  color: red;
   
 }
 
